# gmphd

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  eigen_tools.cpp  gaussian_mixture.cpp  gaussian_mixture.h  gmphd_filter.cpp  gmphd_filter.h
demo/: CMakeLists.txt
demo/headers/: motion_filtering.h
demo/src/: demo.cpp  motion_filtering.cpp  test_unit_GMPHD.cpp  test_unit_qUKF.cpp
gmphd/: eigen_tools.h  gaussian_mixture.h  gmphd_filter.h
libGMPHD/: CMakeLists.txt
libGMPHD/headers/: def.h  eigen_tools.h  gaussian_mixture.h  gmphd_filter.h
libGMPHD/src/: eigen_tools.cpp  gaussian_mixture.cpp  gmphd_filter.cpp
